# internal/handler/rest/v1/album.go
@@ -17,11 +17,17 @@ func NewAlbumHandler(producerHandler kafka.ProducerHandler) *albumHandler {
 	}
 }
 
-// @Summary Creates an album
+// @Summary Create an album
+// @Description Queues a single album for asynchronous persistence.
 // @ID create-album
+// @Tags albums
+// @Accept json
 // @Produce json
-// @Success 201 {array} pb.Album
-// @Router /album [post] [put]
+// @Param album body pb.Album true "Album payload"
+// @Success 201 {object} pb.Album
+// @Failure 400 {object} ErrorResponse
+// @Router /album [post]
+// @Router /album [put]
 func (h *albumHandler) CreateAlbum(ctx *fiber.Ctx) error {
 	newAlbum := &pb.Album{}
 	if err := ctx.BodyParser(newAlbum); err != nil {
